# RespAgent

./: .gitignore  .pylintrc  README.md  pyproject.toml
common/: browser.py  config.py  json_output.py  logger.py  metadata.py  score.py  screenshots.py  web_api.py
metrics/: dom_evaluator.py  dom_snapshot.py
metrics/utils/: dom_utils.py  metric_utils.py  typings.py
multi_agent/: __main__.py
multi_agent/agent/: core.py  event.py  goal.py  interaction.py  reasoning.py
multi_agent/utils/: config.py  config.yaml  litellm_model.py  typings.py
scripts/: datasets.py  evaluate.py  report.py  web_server.py
web/common/: api.js  comp.annotation.js  comp.comparison.js  comp.gallery.js  comp.types.ts  const.js  min-style.css  store.js  utils.js
web/reviewer/: app.js  comp.sidebar.js  index.html  store.eval.js
web/viewer/: app.js  comp.sidebar.js  index.html  store.view.js
