[project]
name = "respagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "colormath>=3.0.0",
    "litellm>=1.83.14",
    "numpy>=2.2.6",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
]
